# vlibs2

./: .gitignore  FAQ.md  README  TODO.md  configure  safeinfo  test.sh
cmake/: c++11.cmake  cxx_standard.cmake  gtest.cmake  pthread.cmake  threads.cmake  vbyte_buffer.cmake  vcan_socket.cmake  vcat.cmake  vchrono.cmake  vcmdline_parser.cmake  vcompiler_traits.cmake  vgit.cmake  vgit_post.cmake  vlog.cmake  vnetwork.cmake  vpoll.cmake  vposix.cmake  vprofile.cmake  vserial_port.cmake  vsettings.cmake  vsignal.cmake  vthread.cmake  vtimer.cmake  vutf.cmake
gtests/: CMakeLists.txt  README  cmake_tests.sh  list_of_tests.sh  qmake_tests.pro  qmake_tests.sh  run_all.sh
gtests/test_FISH/: CMakeLists.txt  main.cpp  test_FISH.pro
qmake/: gtest.pri  v_has_qt.pri  vbyte_buffer.pri  vcan_socket.pri  vcat.pri  vchrono.pri  vcmdline_parser.pri  vcompiler_traits.pri  vgit.pri  vlog.pri  vnetwork.pri  vpoll.pri  vposix.pri  vprofile.pri  vserial_port.pri  vsettings.pri  vsignal.pri  vthread.pri  vtimer.pri
vbyte_buffer/: VByteBuffer  VByteBufferView  vbyte_buffer.cmake  vbyte_buffer.cpp  vbyte_buffer.h  vbyte_buffer.pri  vbyte_buffer_view.cpp  vbyte_buffer_view.h
vbyte_buffer/dev_vbyte_buffer/: CMakeLists.txt  main.cpp
vbyte_buffer/test_vbyte_buffer/: CMakeLists.txt  main.cpp  test_vbyte_buffer.pro
vcan_socket/: README  vcan_socket.cmake  vcan_socket.cpp  vcan_socket.h  vcan_socket.pri
vcan_socket/test_vcan_socket/: CMakeLists.txt  main.cpp  test_vcan_socket.pro
vcat/: README  vcat.cmake  vcat.cpp  vcat.h  vcat.pri
vcat/impl/: _vcat_iface.h  containers.h  tuple.h  vcat_qt_deploy.cpp  vcat_qt_deploy.h
vcat/impl_vcat/: containers.h  tuple.h  vcat_iface.h  vcat_qt_deploy.cpp  vcat_qt_deploy.h  vcat_wchar_deploy.cpp  vcat_wchar_deploy.h
vcat/test_vcat/: CMakeLists.txt  main.cpp  test_vcat.pro
vcat/test_vcat/dev_winapi/: CMakeLists.txt
vcat/vcat_impl/: containers.h  tuple.h  vcat_iface.h
vchrono/: VTimeMeter  VTimePoint  vchrono.cmake  vchrono.pri  vtime_meter.h  vtime_point.h
vchrono/impl_vchrono/: human_readable_time.cpp  human_readable_time.h  sys_helper_vchrono.cpp  sys_helper_vchrono.h  time_meter.h  time_point_base.h  vtime_point.cpp
vchrono/test_vchrono/: CMakeLists.txt  main.cpp  test_vchrono.pro
vchrono/test_vchrono/dev_winapi/: CMakeLists.txt  main.cpp
vchrono/vchrono_impl/: time_meter.h  time_point_base.h
vcmdline_parser/: vcmdline_parser.cmake  vcmdline_parser.cpp  vcmdline_parser.h  vcmdline_parser.pri
vcmdline_parser/test_vcmdline_parser/: CMakeLists.txt  main.cpp  test_vcmdline_parser.pro
vcompiler_traits/: README  vcompiler_traits.cmake  vcompiler_traits.h  vcompiler_traits.pri  vvoid_type.h
vcompiler_traits/details/: vendian.h  vplatform.h  vpretty_function.h
vcompiler_traits/dev_traits/: CMakeLists.txt  main.cpp
vcompiler_traits/test_vcompiler_traits/: CMakeLists.txt  main.cpp  test_vcompiler_traits.pro
vgit/: README  vgit.cmake  vgit.cpp  vgit.h  vgit.pri  vgit_impl.cmake  vgit_impl.pri  vgit_post.cmake
vgit/impl_vgit/: impl_vgit.cmake  impl_vgit.pri
vgit/test_vgit/: CMakeLists.txt  main.cpp  test_vgit.pro
vlog/: README  readme.md  verror.h  vlog.cmake  vlog.cpp  vlog.h  vlog.pri  vlogentry.cpp  vlogentry.h  vlogger.cpp  vlogger.h
vlog/impl_vlog/: entry.cpp  entry.h  error.cpp  error.h  leveled_log.cpp  leveled_log.h  log_file.cpp  log_file.h  logger.cpp  logger.h  position_fix.cpp  position_fix.h  pre_posix.cpp  pre_posix.h  rotate_log_file.cpp  rotate_log_file.h  shared_log.cpp  shared_log.h  vlog_entry.cpp  vlog_entry.h  vlog_error.cpp  vlog_error.h  vlog_logger.cpp  vlog_logger.h  vlog_position_fix.cpp  vlog_position_fix.h
vlog/test_vlog/: CMakeLists.txt  main.cpp  test_vlog.pro
vlog/vlog_impl/: log_entry.cpp  log_entry.h  logger.cpp  logger.h
vnetwork/: vinet_address.cpp  vinet_address.h  vnetwork.cmake  vnetwork.cpp  vnetwork.h  vnetwork.pri  vsocket_address.cpp  vsocket_address.h  vtcp_server.cpp  vtcp_server.h  vtcp_socket.cpp  vtcp_socket.h  vudp_socket.cpp  vudp_socket.h
vnetwork/dev-getaddrinfo/: main.cpp  teach_gethostbyname.pro
vnetwork/test_vnetwork/: CMakeLists.txt  main.cpp  test_vnetwork.pro
vpoll/: README  vapplication.cpp  vapplication.h  vinvoke_iface.cpp  vinvoke_iface.h  vpoll.cmake  vpoll.cpp  vpoll.h  vpoll.pri  vthread.cpp  vthread.h
vpoll/impl_vpoll/: poll_context.cpp  poll_context.cpp.autosave  poll_context.h  real_poll.cpp  real_poll.h  task_queue.cpp  task_queue.h
vpoll/test_vpoll/: CMakeLists.txt  main.cpp  test_vpoll.pro
vposix/: README  vapplication.cpp  vapplication.h  vfile.cpp  vfile.h  vinvoke_iface.cpp  vinvoke_iface.h  vpoll.pri  vposix.cmake  vposix.cpp  vposix.h  vposix.pri  vprocess.cpp  vprocess.h  vthread.cpp  vthread_context.cpp  vthread_context.h
vposix/impl_vposix/: _z_wrap_fish.cpp  _z_wrap_fish.h  linux_call.cpp  linux_call.h  pipe.cpp  pipe.h  poll_context.cpp  poll_context.h  safe_fd.cpp  safe_fd.h  verrno.cpp  verrno.h  wrap_arpa_inet.cpp  wrap_arpa_inet.h  wrap_errno.cpp  wrap_errno.h  wrap_fcntl.cpp  wrap_fcntl.h  wrap_linux_can.cpp  wrap_linux_can.h  wrap_net_if.cpp  wrap_net_if.h  wrap_signal.cpp  wrap_stdio.cpp  wrap_stdio.h  wrap_sys_epoll.cpp  wrap_sys_epoll.h  wrap_sys_eventfd.cpp  (+13 more)
vprofile/: vprofile.cmake  vprofile.cpp  vprofile.h  vprofile.pri  vprofile_widget.cpp  vprofile_widget.h
vprofile/test_vprofile/: CMakeLists.txt  main.cpp  test_vprofile.pro
vserial_port/: vserial_port.cmake  vserial_port.cpp  vserial_port.h  vserial_port.pri  vterminal_options.cpp  vterminal_options.h
vserial_port/test_vserial_port/: CMakeLists.txt  main.cpp  test_vserial_port.pro
vsettings/: README  vsettings.cmake  vsettings.cpp  vsettings.h  vsettings.pri
vsignal/: vsignal.cmake  vsignal.h  vsignal.pri
vthread/: vthread.cmake  vthread.cpp  vthread.h  vthread.pri
vthread/test_vthread/: CMakeLists.txt  main.cpp  test_vthread.pro
vtimer/: vtimer.cmake  vtimer.cpp  vtimer.h  vtimer.pri
vtimer/test_vtimer/: CMakeLists.txt  main.cpp  test_vtimer.pro
vutf/: vutf.cmake  vutf8_validator.cpp  vutf8_validator.h
vutf/test_vutf/: CMakeLists.txt  main.cpp
(+13 files in other folders)
